# ViennaLS

./: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/AirGapDeposition/: AirGapDeposition.cpp
Examples/Deposition/: Deposition.cpp
Examples/FastAdvection/: FastAdvection.cpp  FastAdvection.py
Examples/PatternedSubstrate/: PatternedSubstrate.cpp
Examples/PeriodicBoundary/: PeriodicBoundary.cpp
Examples/SharedLib/: SharedLib.cpp
Examples/SquareEtch/: SquareEtch.cpp
Examples/VoidEtching/: VoidEtching.cpp
Tests/: CMakeLists.txt
Tests/Advection/: Advection.cpp
Tests/Advection2D/: Advection2D.cpp
Tests/AdvectionPlane/: AdvectionPlane.cpp
Tests/BooleanOperation/: BooleanOperation.cpp
Tests/BoundaryConditions/: BoundaryConditions.cpp
Tests/CalculateNormalVectors/: CalculateNormalVectors.cpp
Tests/ConvexHull/: ConvexHull.cpp
Tests/ConvexHull3D/: ConvexHull3D.cpp
Tests/DiskMesh/: DiskMesh.cpp
Tests/Expand/: Expand.cpp
Tests/FastAdvect/: FastAdvect.cpp
Tests/FastAdvectTrench/: FastAdvectTrench.cpp
Tests/FileWriter/: FileWriter.cpp
Tests/HullMesh/: HullMesh.cpp
Tests/Make3DSphere/: Make3DSphere.cpp
Tests/MakeSphere/: MakeSphere.cpp
Tests/MultiMaterialAdvection/: MultiMaterialAdvection.cpp
Tests/PeriodicBoundary2D/: PeriodicBoundary2D.cpp
Tests/ReadVolume/: ReadVolume.cpp
Tests/Serialize/: Serialize.cpp
Tests/VisualizationMesh/: VisualizationMesh.cpp
Tests/VoidDetection/: VoidDetection.cpp
Wrapping/: pyWrap.cpp
cmake/: ViennaLSConfig.cmake.in
dev/: CMakeCache.txt  CMakeLists.txt  StackedNanowire.cpp  _TODO_Advection.txt  _tmpTest.hpp  advectSphereCurve.cpp  compareCurvatures.cpp  curve.cpp  dMtodE.cpp  derivatives.hpp  eulerAdvect.cpp  expandSphere.hpp  flaggingTest.cpp  generalTest.cpp  hrleTestIterator.hpp  iteratorTests.cpp  lsCurvatureCalculator.hpp  lsEikonalExpandTest.hpp  myFlagging.hpp  normalizeFMM.cpp  planeBoxEuclid.cpp  saveLoadLevelSet.cpp  silvacoLikeFlagging.hpp  thinLyers.cpp  timeCurvatures.cpp  timeDerivativesCurve.cpp
dev/legecy/: curve.cpp  dMtodE.cpp  iteratorTests.cpp
docs/doxygen/html/: lsWriteVisualizationMesh_8hpp.html
include/: lsCalculateCurvatures.hpp  lsCalculateNormalVectors.hpp  lsConvertEuclid.hpp  lsDomain.hpp  lsEiknoalExpand.hpp  lsEikonalExpand.hpp  lsEnquistOsher.hpp  lsExpand.hpp  lsFastAdvect.hpp  lsFastAdvectDistributions.hpp  lsGeometries.hpp  lsLocalLaxFriedrichsAnalytical.hpp  lsMakeGeometry.hpp  lsReader.hpp  lsReduce.hpp  lsToDiskMesh.hpp  lsToMesh.hpp  lsVelocityField.hpp
lib/: specialisations.cpp
